# openmonitor

./: CMakeLists.txt  README.md
monitor/: log.h  monitor_main.cpp
script/: build_android.sh
